--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,19 +11,19 @@ permissions: read-all
 
 jobs:
   bot:
-    uses: anselmes/cicd/.github/workflows/bot.yml@d432be297b0bd273290f1f27597fcae874705551 # main https://github.com/anselmes/cicd/commit/d432be297b0bd273290f1f27597fcae874705551
+    uses: anselmes/cicd/.github/workflows/bot.yml@main # main https://github.com/anselmes/cicd/commit/main
     permissions:
       issues: write
       pull-requests: write
       repository-projects: write
   trivy:
-    uses: anselmes/cicd/.github/workflows/trivy.yml@d432be297b0bd273290f1f27597fcae874705551 # main https://github.com/anselmes/cicd/commit/d432be297b0bd273290f1f27597fcae874705551
+    uses: anselmes/cicd/.github/workflows/trivy.yml@main # main https://github.com/anselmes/cicd/commit/main
     permissions:
       contents: write
       id-token: write
       security-events: write
   scorecard:
-    uses: anselmes/cicd/.github/workflows/scorecard.yml@d432be297b0bd273290f1f27597fcae874705551 # main https://github.com/anselmes/cicd/commit/d432be297b0bd273290f1f27597fcae874705551
+    uses: anselmes/cicd/.github/workflows/scorecard.yml@main # main https://github.com/anselmes/cicd/commit/main
     permissions:
       actions: read
       attestations: read
@@ -40,4 +40,4 @@ jobs:
       security-events: write
       statuses: read
   # sonarqube:
-  #   uses: anselmes/cicd/.github/workflows/sonarqube.yml@d432be297b0bd273290f1f27597fcae874705551 # main https://github.com/anselmes/cicd/commit/d432be297b0bd273290f1f27597fcae874705551
+  #   uses: anselmes/cicd/.github/workflows/sonarqube.yml@main # main https://github.com/anselmes/cicd/commit/main
