--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,12 +16,24 @@ jobs:
       issues: write
       pull-requests: write
       repository-projects: write
+
   trivy:
     uses: anselmes/cicd/.github/workflows/trivy.yml@main # main https://github.com/anselmes/cicd/commit/main
     permissions:
+      actions: read
+      attestations: read
+      checks: read
       contents: write
+      deployments: read
+      discussions: read
       id-token: write
+      issues: read
+      packages: read
+      pages: read
+      pull-requests: read
+      repository-projects: read
       security-events: write
+      statuses: read
   scorecard:
     uses: anselmes/cicd/.github/workflows/scorecard.yml@main # main https://github.com/anselmes/cicd/commit/main
     permissions:
@@ -39,5 +51,6 @@ jobs:
       repository-projects: read
       security-events: write
       statuses: read
+
   # sonarqube:
   #   uses: anselmes/cicd/.github/workflows/sonarqube.yml@main # main https://github.com/anselmes/cicd/commit/main
