--- a/config/cloudinit/admission.yaml
+++ b/config/cloudinit/admission.yaml
@@ -1,7 +1,7 @@
 #cloud-config
 write_files:
   - path: /etc/admission.yaml
-    permissions: 644
+    permissions: "644"
     owner: root
     content: |
       ---
