--- a/config/cloudinit/default.yaml
+++ b/config/cloudinit/default.yaml
@@ -12,19 +12,19 @@ users:
 ssh_authorized_keys: []
 write_files:
   - path: /etc/environment
-    permissions: 644
+    permissions: "644"
     owner: root
     content: |
       PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin"
       EDITOR="vim"
   - path: /usr/lib/systemd/system/user@.service.d/delegate.conf
-    permissions: 644
+    permissions: "644"
     owner: root
     content: |
       [Service]
       Delegate=cpu cpuset io memory pids
   - path: /opt/setup-machine.sh
-    permissions: 755
+    permissions: "755"
     owner: root
     content: |
       #!/bin/bash
