--- a/config/kind.yaml
+++ b/config/kind.yaml
@@ -5,15 +5,15 @@ name: labos
 networking:
   apiServerAddress: 127.0.0.1
   apiServerPort: 6443
-  disableDefaultCNI: false
-  ipFamily: dual
+  disableDefaultCNI: true
+  # ipFamily: dual
 featureGates:
   UserNamespacesSupport: true
 nodes:
   - role: control-plane
-    extraMounts:
-      - hostPath: /var/run/docker.sock
-        containerPath: /var/run/docker.sock
+    # extraMounts:
+    #   - hostPath: /var/run/docker.sock
+    #     containerPath: /var/run/docker.sock
     extraPortMappings:
       - containerPort: 80
         hostPort: 80
