devcontainer: Update devcontainer service name
Signed-off-by: Schubert Anselme <schubert@anselm.es>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "labOS",
   "dockerComposeFile": ["${localWorkspaceFolder}/compose-dev.yaml"],
-  "service": "devos",
+  "service": "labos",
   "workspaceFolder": "/home/labos/workspace",
   "postCreateCommand": "${containerWorkspaceFolder}/scripts/config-devos.sh",
   "remoteUser": "devos"
